--- a/package.json
+++ b/package.json
@@ -15,12 +15,12 @@
     "i18next": "^23.11.2",
     "mysql": "^2.18.1",
     "mysql2": "^3.9.6",
+    "rc-virtual-list": "^3.11.5",
     "react": "^18.2.0",
     "react-bootstrap": "^2.10.2",
     "react-dom": "^18.2.0",
     "react-i18next": "^14.1.1",
     "react-icons": "^5.0.1",
-    "react-scroll-parallax": "^3.4.5",
     "react-twitter-widgets": "^1.11.0",
     "styled-components": "^6.1.8"
   },
