--- a/package.json
+++ b/package.json
@@ -21,7 +21,7 @@
     "react-dom": "^18.2.0",
     "react-i18next": "^14.1.1",
     "react-icons": "^5.0.1",
-    "react-twitter-widgets": "^1.11.0",
+    "react-twitter-embed": "^4.0.4",
     "styled-components": "^6.1.8"
   },
   "devDependencies": {
